# flipt

./: .all-contributorsrc  .dockerignore  .env  .flipt.yml  .gitignore  .gitleaks.toml  .gitleaksignore  .gitpod.yml  .golangci.yml  .goreleaser.darwin.yml  .goreleaser.edge.yml  .goreleaser.linux.yml  .goreleaser.multi.yml  .goreleaser.nightly.yml  .goreleaser.yml  .imgbotconfig  .licensed.yml  .markdownlint.yaml  .mise.toml  .mockery.yaml  .mockery.yml  .nancy-ignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .spelling  .tool-versions  .travis.yml  AGENTS.md  BUILD.bazel  Brewfile  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPRECATIONS.md  DEVELOPMENT.md  Dockerfile  (+45 more)
.devcontainer/: Dockerfile  devcontainer.json  flipt.code-workspace  setup.sh  welcome-message.txt
.github/: .kodiak.toml  CODEOWNERS  FUNDING.yml  contributing.md  dependabot.yml  main.workflow  renovate.json  renovate.json5  stale.yml
_tools/: go.mod  go.sum  tools.go
chart/: Chart.yaml  values.yaml
client/engine/: Cargo.toml
client/engine/examples/: evaluation.rs
client/engine/src/: lib.rs
client/engine/src/common/: mod.rs
client/engine/src/evaluator/: mod.rs
client/engine/src/flipt/: models.rs
client/engine/src/models/: mod.rs
client/engine/src/models/flipt/: mod.rs
client/engine/src/models/transport/: mod.rs
client/engine/src/store/: mod.rs  models.rs  parsers.rs  snapshot.rs
client/engine/src/testdata/: state.json
client/python-evaluation/: README.md  pyproject.toml
config/: config.go  config.yaml  config_test.go  default.yml  dev.yml  flipt.schema.cue  flipt.schema.json  flipt.yaml  local.yml  production.yml  schema_test.go
core/: go.mod  go.sum
cue/: flipt.cue  validate.go  validate_test.go
deploy/: Dockerfile
docs/: CNAME  README.md  architecture.md  concepts.md  configuration.md  development.md  getting_started.md  index.md  installation.md  integration.md  licensing.md
errors/: LICENSE  errors.go  go.mod
example/: README.md  main.go
magefiles/: magefile.go
proto/: flipt.pb.go  flipt.pb.gw.go  flipt.proto  flipt.yaml
rpc/: buf.gen.yaml  buf.yaml  flipt.pb.go  flipt.pb.gw.go  flipt.proto  flipt_grpc.pb.go  operators.go  validation.go  validation_test.go
script/: bootstrap  build  server  test
scripts/: README.md  build  ci  integration  lint  release  test
sdk/: openapi.yaml
sdk/client/engine/: Cargo.toml  README.md  flipt_engine.h
sdk/client/engine/examples/: evaluation.rs
sdk/client/engine/src/: lib.rs
sdk/client/engine/src/evaluator/: mod.rs
sdk/client/engine/src/store/: mod.rs  parsers.rs  snapshot.rs
sdk/client/engine/src/testdata/: state.json
sdk/client/python/flipt-client-python/: pyproject.toml
sdk/client/python/flipt-client-python/flipt_client_python/: __init__.py  models.py
server/: errors.go  evaluator.go  evaluator_test.go  flag.go  flag_test.go  middleware.go  middleware_test.go  options.go  options_test.go  rule.go  rule_test.go  (+5 more)
(+3464 files in other folders)
