proto_library(
    name = "flipt_proto",
    srcs = ["proto/flipt.proto"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

## Go

load("@build_stack_rules_proto//go:go_grpc_compile.bzl", "go_grpc_compile")

go_grpc_compile(
    name = "flipt_go",
    deps = ["flipt_proto"],
)

## Java

load("@build_stack_rules_proto//java:java_grpc_compile.bzl", "java_grpc_compile")

java_grpc_compile(
    name = "flipt_java",
    deps = ["flipt_proto"],
)

## Ruby

load("@build_stack_rules_proto//ruby:ruby_grpc_compile.bzl", "ruby_grpc_compile")

ruby_grpc_compile(
    name = "flipt_ruby",
    deps = ["flipt_proto"],
)

## Pyhon

load("@build_stack_rules_proto//python:python_proto_compile.bzl", "python_proto_compile")

python_proto_compile(
    name = "flipt_python",
    deps = ["flipt_proto"],
)
