[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.150"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
uuid = { version = "1.5.0", features = ["v4"] }
crc32fast = "1.3.2"
snafu = "0.7.5"
chrono = "0.4.31"
futures = "0.3"
