[tool.poetry]
name = "python-evaluation"
version = "0.1.0"
description = ""
authors = ["Yoofi Quansah <ybquansah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
