[package]
name = "flipt-client-engine"
version = "0.0.1"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"

[dependencies]
libc = "0.2.150"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
uuid = { version = "1.5.0", features = ["v4"] }
crc32fast = "1.3.2"
snafu = "0.7.5"
chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
futures = "0.3"

[dev-dependencies]
mockall = "0.11.4"

[lib]
name = "engine"
crate-type = ["rlib", "dylib"]
